# docs/swagger.json
@@ -1616,6 +1616,68 @@
                 }
             }
         },
+        "/meetings/link/{meetingID}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update link",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meetings"
+                ],
+                "summary": "Update link",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Meeting ID",
+                        "name": "meetings",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Meetings",
+                        "name": "meetings",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.UpdateMeetingPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/store.Meetings"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/meetings/mentor-not-completed/{mentorID}": {
             "get": {
                 "security": [
@@ -3494,6 +3556,9 @@
                 "day": {
                     "type": "string"
                 },
+                "link": {
+                    "type": "string"
+                },
                 "mentorid": {
                     "type": "integer"
                 },
@@ -3675,6 +3740,14 @@
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.UpdateMeetingPayload": {
+            "type": "object",
+            "properties": {
+                "link": {
                     "type": "string"
                 }
             }
